# heimdall

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: heimdall-pr-check.yml  heimdall-pr-demo.yml  heimdall-scan.yml
docs/: logo-ascii.txt  terraform_attack_path_engine_doc.md
examples/: risky-account-graph.json
examples/terraform-demo/: README.md  dangerous-change.tf.example  main.tf  test-change.tf
heimdall/: __init__.py  aws_utils.py  baseline.py  cli.py  cli_utils.py  diff_engine.py  exporters.py  report_generator.py  tui.py
heimdall/attack_chain/: __init__.py  builder.py  schema.py
heimdall/commands/: __init__.py  attack_chain.py  cross_service.py  dashboard.py  diff.py  list_paths.py  path.py  privesc.py  report.py  risks.py  show_principal.py  summary.py  terraform.py
heimdall/cross_service/: __init__.py  models.py  registry.py  scanner.py
heimdall/cross_service/analyzers/: __init__.py  dynamodb_analyzer.py  ec2_analyzer.py  kms_analyzer.py  lambda_analyzer.py  rds_analyzer.py  s3_analyzer.py  secrets_analyzer.py  sns_analyzer.py  sqs_analyzer.py  sts_analyzer.py
heimdall/exporters/: __init__.py  csv_export.py  sarif.py
heimdall/graph/: GRAPH_INTELLIGENCE_V1.md  __init__.py  analyzer.py  builder.py  graph_intelligence.py  permission_analyzer.py
heimdall/iam/: __init__.py  arn_utils.py  cloudtrail_monitor.py  eks_detector.py  eks_scanner.py  policy_resolver.py  privesc_patterns.py  resource_analyzer.py  scanner.py  scp_resolver.py  secrets_scanner.py
heimdall/pr_simulator/: __init__.py  attack_simulator.py  cli.py  state_diff.py  terraform_parser.py
heimdall/terraform/: __init__.py  analyzer.py  models.py  parser.py  patterns.py  recommendations.py
